--- a/front-end/src/components/nav-bar/style.css
+++ b/front-end/src/components/nav-bar/style.css
@@ -5,7 +5,7 @@
 nav {
   display: flex;
   /* background-color: rgb(175, 175, 175); */
-  padding: 20px;
+  padding: 20px 0;
   align-items: center;
   justify-content: space-between;
   font-size: 1rem;
