--- a/front-end/src/components/nav-bar/style.css
+++ b/front-end/src/components/nav-bar/style.css
@@ -1,13 +1,13 @@
 .logo {
   width: 170px;
+  margin-right: auto;
 }
 
 nav {
   display: flex;
   /* background-color: rgb(175, 175, 175); */
   padding: 20px 0;
-  align-items: center;
-  justify-content: space-between;
+  align-items: center;  
   font-size: 1rem;
   max-width: 1200px;
   margin: auto auto;
@@ -17,6 +17,11 @@ nav {
   display: flex;
   list-style-type: none;
   gap: 50px;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%); 
+  top: 24px;
+  
 }
 
 a {
