--- a/front-end/src/components/nav-bar/style.css
+++ b/front-end/src/components/nav-bar/style.css
@@ -1,14 +1,15 @@
 .logo {
-  width: 170px;
+  width: 190px;
   margin-right: auto;
 }
 
-nav {
+.navegation {
   display: flex;
   /* background-color: rgb(175, 175, 175); */
-  padding: 20px 0;
-  align-items: center;  
-  font-size: 1rem;
+  padding: 40px 0;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 500;
   max-width: 1200px;
   margin: auto auto;
 }
@@ -19,9 +20,8 @@ nav {
   gap: 50px;
   position: fixed;
   left: 50%;
-  transform: translateX(-50%); 
-  top: 24px;
-  
+  transform: translateX(-50%);
+  top: 40px;
 }
 
 a {
