--- a/front-end/src/styles/Global.css
+++ b/front-end/src/styles/Global.css
@@ -7,12 +7,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
   font-size: 62.5%;
-  background-color: #444;
-  color: #fff;
+  background-color: green;
+  color: #000000;
 }
-
-
