--- a/front-end/src/styles/Global.css
+++ b/front-end/src/styles/Global.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 body {
-  font-size: 62.5%;
-  background-color: #f6f7;
-  color: #000000;
+    font-size: 62.5%;
+    background-color: #cacaca;
+    color: #000000;
 }
