--- a/front-end/src/styles/Global.css
+++ b/front-end/src/styles/Global.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
+    scroll-behavior: smooth;
 }
 
 body {
