--- a/front-end/src/components/nav-bar/style.css
+++ b/front-end/src/components/nav-bar/style.css
@@ -6,10 +6,12 @@
 .navegation {
     display: flex;
     /* background-color: rgb(175, 175, 175); */
-    padding: 40px 0;
+    padding: 17px 0;
     align-items: center;
-    font-size: 20px;
+    font-size: 15px;
+    font-weight: bold;
     font-weight: 500;
+    letter-spacing: 0.03rem;
     max-width: 1200px;
     margin: auto auto;
 }
@@ -21,7 +23,7 @@
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
-    top: 40px;
+    top: 22px;
 }
 
 a {
